--- a/app/view/animation.html
+++ b/app/view/animation.html
@@ -3,6 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>animation</title>
+    <script id="vs" type="x-shader/x-vertex">
+        attribute vec3 position; //顶点位置
+        attribute vec4 color; //顶点颜色
+        uniform   mat4 mvpMatrix;
+        varying   vec4 vColor;
+        void main(void) {
+          vColor = color;
+          gl_Position = mvpMatrix * vec4(position, 1.0);
+        }
+    </script>
+    
+    <script id="fs" type="x-shader/x-fragment">
+        precision mediump float;
+        varying vec4 vColor;
+        void main(void) {
+            gl_FragColor = vColor;
+        }
+    </script>
 </head>
 <body>
 <canvas id="canvas" width="500" height="400">
