--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -2,24 +2,24 @@
 	margin: 0;
 	padding: 0;
 }
-button {
-	outline: none;
+html, body {
+	width: 100%;
+	height: 100%;
 }
-
-.container {
-	#canvas {
-	}
-	.btn-group {
-	}
-	.btn {
-		border: 1px solid #bdbdbd;
-		padding: 5px 15px;
-		color: #bdbdbd;
-		border-radius: 5px;
-		cursor: pointer;
-	}
-	.btn-blue {
-		background-color: #1780e5;
-		color: #fff;
-	}
+#canvas {
+	width: 500px;
+	height: 300px;
+}
+.btn-group {
+}
+.btn {
+	border: 1px solid #bdbdbd;
+	padding: 5px 15px;
+	color: #bdbdbd;
+	border-radius: 5px;
+	cursor: pointer;
+}
+.btn-blue {
+	background-color: #1780e5;
+	color: #fff;
 }
