--- a/app/view/animation.html
+++ b/app/view/animation.html
@@ -6,10 +6,21 @@
     <script id="vs" type="x-shader/x-vertex">
         attribute vec3 position; //顶点位置
         attribute vec4 color; //顶点颜色
+        attribute vec3 normal; //法线信息
         uniform   mat4 mvpMatrix;
+        uniform   mat4 invMatrix;
+        uniform   vec3 lightDirection; //光线方向
+        uniform   vec3 eyeDirection;
+        uniform   vec4 ambientColor;
         varying   vec4 vColor;
         void main(void) {
-          vColor = color;
+          vec3  invLight = normalize(invMatrix * vec4(lightDirection, 0.0)).xyz; //normalize标准化, .xyz带入向量
+          vec3  invEye   = normalize(invMatrix * vec4(eyeDirection, 0.0)).xyz;
+          vec3  halfLE   = normalize(invLight + invEye);
+          float diffuse  = clamp(dot(normal, invLight), 0.0, 1.0); //clamp限制数值范围
+          float specular = pow(clamp(dot(normal, halfLE), 0.0, 1.0), 50.0); //pow求幂
+          vec4  light    = color * vec4(vec3(diffuse), 1.0) + vec4(vec3(specular), 1.0);
+          vColor = light + ambientColor;
           gl_Position = mvpMatrix * vec4(position, 1.0);
         }
     </script>
@@ -23,7 +34,7 @@
     </script>
 </head>
 <body>
-<canvas id="canvas" width="500" height="400">
+<canvas id="canvas">
 
 </canvas>
 </body>
